--- a/DDPTP/templates/submission.html
+++ b/DDPTP/templates/submission.html
@@ -8,6 +8,7 @@
     <p>{{ texts.description }}</p>
     <form method="POST" action="index"> {% csrf_token %}
         {{form.as_p}}
+        <input type="hidden" value="{{accept_return}}" name="accept_return"/>
         <input type="submit" value="submit" name="submission"/>
     </form>
 </div>
@@ -17,8 +18,8 @@ $("p").addClass("form-group");
 $("input").addClass("form-control");
 $("select").addClass("form-control");
 $("[name='submission']").addClass("btn btn-success");
-$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_age']");
-$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_personal_status_and_sex']");
+$("<b class='text-info'>(Protected) </b>").insertBefore("[for='id_age']");
+$("<b class='text-info'>(Protected) </b>").insertBefore("[for='id_personal_status_and_sex']");
 </script>
 
 {% endblock %}
