--- a/DDPTP/static/css/experiment.css
+++ b/DDPTP/static/css/experiment.css
@@ -64,3 +64,23 @@ div.hidden {
     padding-bottom: 10px;
     margin-bottom:10px;
 }
+
+#e1_d2_customize_content{
+    margin-top: 10px;
+}
+
+#e1_d2_customize_s1{
+    margin-bottom: 20px;
+}
+
+#e1_d2_customize_s3{
+    margin-bottom: 30px;
+}
+
+#e1_d2_customize_result{
+    margin-top: 30px;
+}
+
+.abstraction_options{
+    margin-bottom: 20px;
+}
