--- a/DDPTP/static/css/experiment.css
+++ b/DDPTP/static/css/experiment.css
@@ -18,7 +18,6 @@ input[type="button"] {
     padding: 5px 18px;
 }
 
-
 input[type="button"]:hover {
     background-color: white;
     color: black;
@@ -83,4 +82,8 @@ div.hidden {
 
 .abstraction_options{
     margin-bottom: 20px;
+}
+
+.chart{
+    height: 200px;
 }
